fix: add scrollbar width to breakpoint

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,5 +16,5 @@ $pale-blue: #edfaff;
 $red: #ff0000;
 
 /* breakpoint */
-$mobile: 785px;
-$main-breakpoint: 1193px;
+$mobile: 785px + 17px;
+$main-breakpoint: 1193px + 17px;
